--- a/Grass/index.html
+++ b/Grass/index.html
@@ -11,7 +11,7 @@
 
         <h3>NEW TEMPLATE FOR YOU</h3>
 
-        <img src="" alt="">
+        <img src="./images/gallery-img-02.jpg" alt="Mountain Hill">
     </header>
     <main>
         <div>
@@ -21,15 +21,12 @@
             </h5>
             <div>
                 <button>Learn More</button>
-            <c/div>
+            </div>
 
         </div>
 
         <div>
-            <h3>Lorem ipsum dolor</h3>
-            <h5>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque maxime possimus quaerat iure voluptatibus nihil odio, excepturi corrupti neque. In, ea officiis sed vitae asperiores quam! Odit, at excepturi! Quos!
-            </h5>
+            <h3>Lorem ipsum dolor</h3> 
             <div>
                 <button>Learn More</button>
             </div>
@@ -51,37 +48,41 @@
         </div>
 
         <div>
-            <img src="" alt="">
+            <img src="images/tm-img-1.jpg" alt="">
 
             <h3>Loem ipsum dolor</h3>
             <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, dolorem enim nihil labore impedit qui esse dolore expedita eum tenetur?</h5> 
             <button>Details</button>
+            <br>
         </div>
 
         <div>
+            <img src="images/tm-img-2.jpg" alt="">
             <h3>Vestibum sit amet</h3>
             <h5>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus ipsa autem veniam accusantium consequuntur, soluta minima suscipit voluptates reiciendis veritatis, nesciunt odit assumenda.</h5>
             <button>Details</button>
+            <br>
         </div>
-        <img src="" alt="">
 
+        <img src="images/tm-bg-section-4.jpg" alt="">
+        
         <div>
-            <div><img src="" alt=""></div>
+            <div><img src="images/tm-sc4-img-1.jpg" alt=""></div>
 
             <div>
                 <div>
-                    <img src="" alt="">
+                    <img src="images/sc4-img-2.jpg" alt="">
                     <h3> Etiam tincidunt ullamcorper</h3>
                     <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita alias tempora aliquid.</h5>
                 </div>
 
                 <div>
-                    <img src="" alt="">
+                    <img src="images/sc4-img-3.jpg" alt="">
                     <h3>Sed et finibus tortor</h3>
                     <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi quas voluptatum porro!</h5>
                 </div>
 
-                <div><img src="" alt="">
+                <div><img src="images/sc4-img-4.jpg" alt="">
                     <h3>Vestibum sit amet</h3>
                     <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure magnam vero maxime!</h5>
                 </div>
